Updating picture, size and labels

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="titles">
             <h1>Hello! <span>I'm Mathieu</span></h1>
-            <h2>I'm passionate by Design, Frontend Development and Photography.</h2>
+            <h2>I'm passionate by Frontend Development, Design, Drawing and Photography.</h2>
         </div>
         <div class="social">
             <a class="github" href="http://github.com/Fairen" target="_blank">Github</a>
@@ -69,7 +69,26 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <div class="photo-box">
+                                    <div class="image-wrap">
+                                        <a href="#">
+                                            <img src="images/projects/html5pres2.png">
+                                        </a>
+                                        <div class="likes">HTML5 presentation editor</div>
+                                    </div>
+                                    <div class="description">
+                                        #HTML5 #Presentation #Slides #ObjectifInformatique
+                                        <div class="date">February, 2013 
+                                            <span class="pull-right with">
+                                                /w <a href="http://www.twitter.com/_bnaude" target="_blank">@_bnaude</a>, <a href="http://www.twitter.com/MagicianViVi" target="_blank">@MagicianViVi</a>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                 <div class="photo-box">
                                     <div class="image-wrap">
                                         <a href="#">
@@ -88,24 +107,6 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                                <div class="photo-box">
-                                    <div class="image-wrap">
-                                        <a href="#">
-                                            <img src="images/projects/html5pres2.png">
-                                        </a>
-                                        <div class="likes">HTML5 presentation editor</div>
-                                    </div>
-                                    <div class="description">
-                                        #HTML5 #Presentation #Slides #ObjectifInformatique
-                                        <div class="date">February, 2013 
-                                            <span class="pull-right with">
-                                                /w <a href="http://www.twitter.com/_bnaude" target="_blank">@_bnaude</a>, <a href="http://www.twitter.com/MagicianViVi" target="_blank">@MagicianViVi</a>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
 
                         </div>
 
@@ -120,7 +121,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h4>Get in touch</h4>
-                    <p class="about-text">I shoot, design and code. Don't hesitate and get in touch with me if you need some creative work done. I always work to achieve my best and fulfil client needs</p>
+                    <p class="about-text">I draw, design and code. Don't hesitate and get in touch with me if you need some creative work done. I always work to achieve my best and fulfil client needs</p>
                     <a class="contact-now-btn" href="mailto:vacher.mathieu@gmail.com">Contact Now</a>
                 </div>
             </div>
@@ -129,7 +130,7 @@
     
     <section class="footer-bottom">
         <section class="footer-bottom">
-            2014 &copy; Mathieu Vacher. All rights reserved.
+            2015 &copy; Mathieu Vacher. All rights reserved.
         </section>
     </section>
 
