--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width,user-scalable=no">
     <title>Instagram Portfolio</title>
+    <meta name="viewport" content="width=device-width,user-scalable=no">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700|Kaushan+Script|Montserrat' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/modernizr.js"></script>
 </head>
 <body>
     <header>
-        <img src="images/desktop.jpg" alt="Mountains">
         <div class="cover"></div>
         <div class="name fancy-font">
                     Mathieu V.
@@ -30,6 +31,9 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="instagram-content">
+                        <h1>
+                            <i class="fa fa-camera icon-circle" ></i>
+                        </h1>
                         <h3>Latest Photos</h3>
                         <div class="row photos-wrap">
                             <!-- Instafeed target div -->
@@ -41,16 +45,25 @@
         </div>
     </section>
 
+    <section class="parallax-container first-image">
+        <div class="cover"></div>
+        <div class="sub-titles">
+            <h1>
+                <i class="fa fa-laptop icon-circle" ></i>
+            </h1>
+            <h3>Latest Project</h3>
+        </div>
+    </section>
+
     <section class="instagram-wrap">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
                     <div class="instagram-content">
-                        <h3>Latest Project</h3>
 
                         <div class="row photos-wrap">
 
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                                 <div class="photo-box">
                                     <div class="image-wrap">
                                         <a href="http://github.com/Fairen/music-everywhere">
@@ -69,7 +82,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                                 <div class="photo-box">
                                     <div class="image-wrap">
                                         <a href="#">
@@ -138,6 +151,7 @@
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/instafeed.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/smoothscroll.js"></script>
  
 </body>
 </html>
