--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
         </div>
     </header>
 
+    <svg 
+        class="curveUpColor curveGrey" 
+        xmlns="http://www.w3.org/2000/svg" 
+        version="1.1" 
+        width="100%" 
+        height="100" 
+        viewBox="0 0 100 100" 
+        preserveAspectRatio="none" >
+        <path d="M0 100 C 20 0 50 0 100 100 Z"></path>
+    </svg>
+
     <section class="instagram-wrap">
         <div class="container">
             <div class="row">
@@ -45,6 +56,17 @@
         </div>
     </section>
 
+    <svg 
+        class="curveDownColor curveGrey" 
+        xmlns="http://www.w3.org/2000/svg" 
+        version="1.1" 
+        width="100%" 
+        height="100" 
+        viewBox="0 0 100 100" 
+        preserveAspectRatio="none">
+            <path d="M0 0 C 50 100 80 100 100 0 Z"></path>
+    </svg>
+
     <section class="parallax-container first-image">
         <div class="cover"></div>
         <div class="sub-titles">
@@ -54,6 +76,16 @@
             <h3>Latest Project</h3>
         </div>
     </section>
+
+    <svg 
+        class="curveUpColor curveGrey" 
+        xmlns="http://www.w3.org/2000/svg" 
+        version="1.1" width="100%" 
+        height="100" 
+        viewBox="0 0 100 100" 
+        preserveAspectRatio="none">
+        <path d="M0 100 C 20 0 50 0 100 100 Z"></path>
+    </svg>
 
     <section class="instagram-wrap">
         <div class="container">
@@ -128,6 +160,17 @@
             </div>
         </div>
     </section>
+
+    <svg 
+        class="curveDownColor curveGrey" 
+        xmlns="http://www.w3.org/2000/svg" 
+        version="1.1" 
+        width="100%" 
+        height="100" 
+        viewBox="0 0 100 100" 
+        preserveAspectRatio="none" >
+            <path d="M0 0 C 50 100 80 100 100 0 Z"></path>
+    </svg>
     
     <footer>
         <div class="container">
