--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h1>
                 <i class="fa fa-laptop icon-circle" ></i>
             </h1>
-            <h3>Latest Project</h3>
+            <h3>Latest Projects</h3>
         </div>
     </section>
 
@@ -94,6 +94,17 @@
                     <div class="instagram-content">
 
                         <div class="row photos-wrap">
+
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <div class="photo-box">
+                                    <div class="image-wrap">
+                                        <a href="#">
+                                            <img src="images/projects/cabinet.png" />
+                                        </a>
+                                        <div class="likes">Accounting Counsulting Mockups</div>
+                                    </div>
+                                </div>
+                            </div>
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                                 <div class="photo-box">
@@ -151,7 +162,6 @@
                                     </div>
                                 </div>
                             </div>
-
 
                         </div>
 
