--- a/index.html
+++ b/index.html
@@ -156,9 +156,129 @@
         </div>
     </section>
 
-
     <svg 
         class="curveDownColor curveWhite" 
+        xmlns="http://www.w3.org/2000/svg" 
+        version="1.1" 
+        width="100%" 
+        height="100" 
+        viewBox="0 0 100 100" 
+        preserveAspectRatio="none">
+            <path d="M0 0 C 50 100 80 100 100 0 Z"></path>
+    </svg>
+
+    <section class="parallax-container work-image">
+        <div class="cover"></div>
+        <div class="sub-titles">
+            <h1>
+                <i class="fa fa-user icon-circle" ></i>
+            </h1>
+            <h3>About me</h3>
+        </div>
+    </section>
+
+    <svg 
+        class="curveUpColor curveGrey" 
+        xmlns="http://www.w3.org/2000/svg" 
+        version="1.1" width="100%" 
+        height="100" 
+        viewBox="0 0 100 100" 
+        preserveAspectRatio="none">
+        <path d="M0 100 C 20 0 50 0 100 100 Z"></path>
+    </svg>
+
+    <section class="instagram-wrap work">
+        <div class="container-fluid vparallax-container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="instagram-content">
+
+                        <div class="row photos-wrap items">
+
+                            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 vparallax-r">
+                                <div class="photo-box">
+                                    <div class="image-wrap">
+                                        <a href="#">
+                                            <img src="images/projects/cabinet.png" />
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 skill">
+                                <div class="photo-box">
+                                    <div class="image-wrap">
+                                        <h3>Front-End</h3>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat incidunt ducimus fugit labore eaque molestias ratione, nihil voluptate iusto animi error excepturi architecto adipisci aliquam in facere quaerat saepe similique?    
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row photos-wrap items">
+
+
+                            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 pull-right vparallax-l">
+                                <div class="photo-box">
+                                    <div class="image-wrap">
+                                        <a href="#">
+                                            <img src="images/projects/musiciseverywhere.png">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 skill pull-left">
+                                <div class="photo-box">
+                                    <div class="image-wrap">
+                                        <h3>UX/UI Design</h3>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit delectus, similique praesentium illum, at perferendis incidunt magni voluptatem quo est rerum, iste ullam excepturi, eius officiis quas quaerat animi odio.      
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row photos-wrap items">
+
+                            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 vparallax-r">
+                                <div class="photo-box">
+                                    <div class="image-wrap">
+                                        <a href="#">
+                                            <img src="images/projects/html5pres.png">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 skill">
+                                <div class="photo-box">
+                                    <div class="image-wrap">
+                                        <h3>Back-End</h3>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque nulla, vitae cum voluptatibus unde aperiam, voluptas repellat fugit ullam, dolorem facilis nobis nihil non ut dolore aut blanditiis assumenda dicta.   
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <svg 
+        class="curveDownColor curveGrey" 
         xmlns="http://www.w3.org/2000/svg" 
         version="1.1" 
         width="100%" 
