--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </section>
 
     <svg 
-        class="curveUpColor curveGrey" 
+        class="curveUpColor curveWhite" 
         xmlns="http://www.w3.org/2000/svg" 
         version="1.1" width="100%" 
         height="100" 
@@ -187,7 +187,7 @@
         <path d="M0 100 C 20 0 50 0 100 100 Z"></path>
     </svg>
 
-    <section class="instagram-wrap work">
+    <section class="instagram-wrap instagram-wrap-white work">
         <div class="container-fluid vparallax-container">
             <div class="row">
                 <div class="col-xs-12">
@@ -278,7 +278,7 @@
 
 
     <svg 
-        class="curveDownColor curveGrey" 
+        class="curveDownColor curveWhite" 
         xmlns="http://www.w3.org/2000/svg" 
         version="1.1" 
         width="100%" 
