--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
                     Mathieu V.
         </div>
         <div class="titles">
-            <h1>Hello! <span>I'm Mathieu</span></h1>
-            <h2>I'm passionate by Frontend Development, Design, Drawing and Photography.</h2>
+            <h1>Hi, <span>I'm Mathieu</span></h1>
+            <h2>
+                I start learning coding when i was in high scool, since then i am passionate by developping and building things. <br/>
+                When i'm not coding stuff, i also like Designing, Drawing and Photography.</h2>
         </div>
         <div class="social">
             <a class="github" href="http://github.com/Fairen" target="_blank">Github</a>
@@ -195,23 +197,28 @@
 
                         <div class="row photos-wrap items">
 
-                            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 vparallax-r">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 vparallax-r">
                                 <div class="photo-box">
                                     <div class="image-wrap">
                                         <a href="#">
-                                            <img src="images/projects/cabinet.png" />
+                                            <img src="images/projects/front_end.png" />
                                         </a>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 skill">
-                                <div class="photo-box">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 skill">
+                                <div>
                                     <div class="image-wrap">
                                         <h3>Front-End</h3>
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat incidunt ducimus fugit labore eaque molestias ratione, nihil voluptate iusto animi error excepturi architecto adipisci aliquam in facere quaerat saepe similique?    
                                         </p>
+                                        <div class="row picture-row">
+                                            <img src="images/js.png">
+                                            <img src="images/html.png">
+                                            <img src="images/css.png">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -221,23 +228,28 @@
                         <div class="row photos-wrap items">
 
 
-                            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 pull-right vparallax-l">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 pull-right vparallax-l">
                                 <div class="photo-box">
                                     <div class="image-wrap">
                                         <a href="#">
-                                            <img src="images/projects/musiciseverywhere.png">
+                                            <img src="images/projects/design.png">
                                         </a>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 skill pull-left">
-                                <div class="photo-box">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 skill pull-left">
+                                <div>
                                     <div class="image-wrap">
                                         <h3>UX/UI Design</h3>
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit delectus, similique praesentium illum, at perferendis incidunt magni voluptatem quo est rerum, iste ullam excepturi, eius officiis quas quaerat animi odio.      
                                         </p>
+                                          <div class="row picture-row">
+                                            <img src="images/sketch.png">
+                                            <img src="images/psd.png">
+                                            <img src="images/invision.png">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -246,17 +258,17 @@
 
                         <div class="row photos-wrap items">
 
-                            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 vparallax-r">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 vparallax-r">
                                 <div class="photo-box">
                                     <div class="image-wrap">
                                         <a href="#">
-                                            <img src="images/projects/html5pres.png">
+                                            <img src="images/projects/back_end.png">
                                         </a>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 skill">
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 skill">
                                 <div class="photo-box">
                                     <div class="image-wrap">
                                         <h3>Back-End</h3>
@@ -288,7 +300,16 @@
             <path d="M0 0 C 50 100 80 100 100 0 Z"></path>
     </svg>
 
-    <div id="map"></div>
+    <div id="footer-block">
+        <div id="map"></div>
+        <div class="cover"></div>
+        <div class="sub-titles">
+            <h1>
+                <i class="fa fa-map-marker icon-circle" ></i>
+            </h1>
+            <h3>Get in touch</h3>
+        </div>
+    </div>
 
     <svg 
         class="curveUpColor curveWhite" 
@@ -304,14 +325,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1>
-                        <i class="fa fa-map-marker icon-circle" ></i>
-                    </h1>
-                    <h4>
-                        Get in touch
-                    </h4>
-                    <p class="about-text">I draw, design and code. Don't hesitate and get in touch with me if you need some creative work done. I always work to achieve my best and fulfil client needs</p>
-                    <a class="contact-now-btn" href="mailto:vacher.mathieu@gmail.com">Contact Now</a>
+                    <div>
+                        <a href="mailto:vacher.mathieu@gmail.com">
+                            <i class="fa fa-send cursor-pointer"></i>
+                        </a>
+                        <a target="_blank" href="http://github.com/Fairen">
+                            <i class="fa fa-github cursor-pointer"></i>
+                        </a>
+                        <a target="_blank" href="http://instagram.com/mathvacher">
+                            <i class="fa fa-instagram cursor-pointer"></i>
+                        </a>
+                        <a target="_blank" href="http://twitter.com/mathvacher">
+                            <i class="fa fa-twitter cursor-pointer"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
