[UPFATE] Fix responsive behaviour on navbar display

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <div class="mdl-layout mdl-js-layout has-drawer is-upgraded">
-        <header class="mdl-layout__header mdl-layout__header--scroll fixed mdl-layout__header--transparent">
+        <header class="mdl-layout__header mdl-layout__header--scroll fixed mdl-layout__header--transparent flex-important">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
                 <span class="mdl-layout-title kaushan-script orange">Mathieu V.</span>
