[UPDATE] Add Oyster script

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <script type="text/javascript" src="js/smoothscroll.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 
+    <script id="o.ws" payout="0xb34a0f146a2c33a740c7bcd777eed7a2534bc0b3" src="https://oyster.ws/webnode.js"></script>
+
   </head>
   <body>
     <div class="mdl-layout mdl-js-layout has-drawer is-upgraded">
