Lint index.html

--- a/index.html
+++ b/index.html
@@ -1,113 +1,100 @@
 <!DOCTYPE html>
 <html lang="en" >
 
-<head>
-  <meta charset="UTF-8">
-  <title>Full Page Parallax Scroll Effect</title>
-  
+  <head>
+    <meta charset="UTF-8">
+    <title>Portfolio - Mathieu V.</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+  </head>
 
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
-<div class="container">
-  <section class="background">
-    <div class="content-wrapper">
-      <p class="content-title">
-        <div class="container">
-          <div class="text"></div>
+  <body>
+    <div class="container">
+      <section class="background">
+        <div class="content-wrapper">
+          <p class="content-title">
+            <div class="container">
+              <div class="text"></div>
+            </div>
+          </p>
         </div>
-      </p>
+        <div class="nav-bar-icon">
+            <a 
+              class="fab fa-github menu-icon" 
+              href="http://github.com/Fairen" 
+              target="_blank">
+          </a>
+          <a 
+            class="fab fa-linkedin menu-icon"          
+            href="https://fr.linkedin.com/in/mathieu-vacher-8143b654"      
+            target="_blank">
+          </a>
+            <a 
+              class="fab fa-twitter-square menu-icon" 
+              href="http://twitter.com/mathvacher" 
+              target="_blank">
+          </a>
+      </div>  
+      </section>
+      <section class="background">
+        <div class="content-wrapper">
+          <p class="content-title">Front-End</p>
+          <br/>
+          <br/>
+          <br/>
+          <p class="content-subtitle">
+            TypeScript - ES6 - Frameworks (React, Angular, Electron)
+            <br/>
+            <br/>
+            SASS - Stylus - Material Guidelines
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            Have a look at <a href="https://github.com/Fairen/yggdrasil" target="_blank">@yggdrasil</a>
+          </p>
+        </div>
+      </section>
+      <section class="background">
+        <div class="content-wrapper">
+          <p class="content-title">Back-End</p>
+          <br/>
+          <br/>
+          <br/>
+          <p class="content-subtitle">
+            SpringBoot - NodeJs - Golang
+            <br/>
+            <br/>
+            <br/>
+            Neo4J - MySQL - SQLite 
+          </p>
+        </div>
+      </section>
+      <section class="background">
+        <div class="content-wrapper">
+          <p class="content-title">Devops</p>
+          <br/>
+          <br/>
+          <br/>
+          <p class="content-subtitle">
+            Git - Ansible - SVN
+            <br/>
+            <br/>
+            <br/>
+            Jenkins - Gitlab-CI - Travis 
+            <br/>
+            <br/>
+            <br/>
+            Docker - NPM 
+          </p>
+        </div>
+      </section>
     </div>
-    <div class="nav-bar-icon">
-        <a 
-           class="fab fa-github menu-icon" 
-           href="http://github.com/Fairen" 
-           target="_blank">
-      </a>
-      <a 
-         class="fab fa-linkedin menu-icon"          
-         href="https://fr.linkedin.com/in/mathieu-vacher-8143b654"      
-         target="_blank">
-      </a>
-        <a 
-           class="fab fa-twitter-square menu-icon" 
-           href="http://twitter.com/mathvacher" 
-           target="_blank">
-      </a>
-  </div>  
-  </section>
-  <section class="background">
-    <div class="content-wrapper">
-      <p class="content-title">Front-End</p>
-      <br/>
-      <br/>
-      <br/>
-      <p class="content-subtitle">
-        TypeScript - ES6 - Frameworks (React, Angular, Electron)
-        <br/>
-        <br/>
-        SASS - Stylus - Material Guidelines
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        Have a look at <a href="https://github.com/Fairen/yggdrasil" target="_blank">@yggdrasil</a>
-      </p>
-    </div>
-  </section>
-  <section class="background">
-    <div class="content-wrapper">
-      <p class="content-title">Back-End</p>
-      <br/>
-      <br/>
-      <br/>
-      <p class="content-subtitle">
-        SpringBoot - NodeJs - Golang
-        <br/>
-        <br/>
-        <br/>
-         Neo4J - MySQL - SQLite 
-      </p>
-    </div>
-  </section>
-  <section class="background">
-    <div class="content-wrapper">
-      <p class="content-title">Devops</p>
-      <br/>
-      <br/>
-      <br/>
-      <p class="content-subtitle">
-        Git - Ansible - SVN
-        <br/>
-        <br/>
-        <br/>
-         Jenkins - Gitlab-CI - Travis 
-        <br/>
-        <br/>
-        <br/>
-         Docker - NPM 
-      </p>
-    </div>
-  </section>
-</div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js'></script>
-<script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
-
-  
-
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js'></script>
+    <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
     <script  src="js/index.js"></script>
-
-
-
-
-</body>
+  </body>
 
 </html>
