--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
           <br/>
           <br/>
           <p class="content-subtitle">
-            TypeScript - ES6 - Frameworks (React, Angular, Electron)
+            Angular Lead Dev 
+            <br/>
+            <br/>
+            TypeScript - ES2022 - NgXs
+            <br />
+            <br />
+            Nx - React - Electron
             <br/>
             <br/>
             SASS - Stylus - Material Guidelines
@@ -72,8 +78,11 @@
             SpringBoot - NodeJs - Golang
             <br/>
             <br/>
+            GraphQL - ELK
             <br/>
-            Neo4J - MySQL - SQLite 
+            <br/>
+            <br/>
+            Neo4J - MySQL - SQLite - MongoDB
           </p>
         </div>
       </section>
@@ -88,11 +97,47 @@
             <br/>
             <br/>
             <br/>
-            Jenkins - Gitlab-CI - Travis 
+            Jenkins - Gitlab-CI - Travis - XLR/XLD
             <br/>
             <br/>
             <br/>
             Docker - NPM 
+          </p>
+        </div>
+      </section>
+      <section class="background">
+        <div class="content-wrapper">
+          <p class="content-title">Cloud</p>
+          <br/>
+          <br/>
+          <br/>
+          <p class="content-subtitle">
+            AWS - Certified Cloud Practioner 
+            <br/>
+            <br/>
+            <br/>
+            Kubernetes
+            <br/>
+            <br/>
+            <br/>
+          </p>
+        </div>
+      </section>
+      <section class="background">
+        <div class="content-wrapper">
+          <p class="content-title">Web 3</p>
+          <br/>
+          <br/>
+          <br/>
+          <p class="content-subtitle">
+            Solidity
+            <br/>
+            <br/>
+            <br/>
+            Web3.js
+            <br/>
+            <br/>
+            <br/>
           </p>
         </div>
       </section>
