--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
   </head>
 
   <body>
+    <div class="nav-bar-icon">
+        <a 
+          class="fab fa-github menu-icon" 
+          href="http://github.com/Fairen" 
+          target="_blank">
+      </a>
+      <a 
+        class="fab fa-linkedin menu-icon"          
+        href="https://fr.linkedin.com/in/mathieu-vacher-8143b654"      
+        target="_blank">
+      </a>
+        <a 
+          class="fab fa-twitter-square menu-icon" 
+          href="http://twitter.com/mathvacher" 
+          target="_blank">
+      </a>
+  </div>  
     <div class="container">
       <section class="background">
         <div class="content-wrapper">
@@ -24,23 +41,6 @@
             </div>
           </p>
         </div>
-        <div class="nav-bar-icon">
-            <a 
-              class="fab fa-github menu-icon" 
-              href="http://github.com/Fairen" 
-              target="_blank">
-          </a>
-          <a 
-            class="fab fa-linkedin menu-icon"          
-            href="https://fr.linkedin.com/in/mathieu-vacher-8143b654"      
-            target="_blank">
-          </a>
-            <a 
-              class="fab fa-twitter-square menu-icon" 
-              href="http://twitter.com/mathvacher" 
-              target="_blank">
-          </a>
-      </div>  
       </section>
       <section class="background">
         <div class="content-wrapper">
@@ -50,6 +50,8 @@
           <br/>
           <p class="content-subtitle">
             Angular Lead Dev 
+            <br/>
+            <br/>
             <br/>
             <br/>
             TypeScript - ES2022 - NgXs
@@ -64,7 +66,7 @@
             <br/>
             <br/>
             <br/>
-            Have a look at <a href="https://github.com/Fairen/yggdrasil" target="_blank">@yggdrasil</a>
+            <a href="https://dev.to/fairen/create-an-angular-application-4opl"><img src="img/dev.png" /></a>
           </p>
         </div>
       </section>
@@ -76,6 +78,7 @@
           <br/>
           <p class="content-subtitle">
             SpringBoot - NodeJs - Golang
+            <br/>
             <br/>
             <br/>
             GraphQL - ELK
