--- a/index.html
+++ b/index.html
@@ -53,20 +53,18 @@
             <br/>
             <br/>
             <br/>
-            <br/>
             TypeScript - ES2022 - NgXs
+            <br />
             <br />
             <br />
             Nx - React - Electron
             <br/>
             <br/>
+            <br/>
             SASS - Stylus - Material Guidelines
             <br/>
             <br/>
-            <br/>
-            <br/>
-            <br/>
-            <a href="https://dev.to/fairen/create-an-angular-application-4opl"><img src="img/dev.png" /></a>
+            <a href="https://dev.to/fairen/create-an-angular-application-4opl">📖 Have a look at some of my articles.</a>
           </p>
         </div>
       </section>
