--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             SASS - Stylus - Material Guidelines
             <br/>
             <br/>
-            <a href="https://dev.to/fairen/create-an-angular-application-4opl">📖 Have a look at some of my articles.</a>
+            <br/>
+            Have a look at some of my <a href="https://dev.to/fairen/create-an-angular-application-4opl"> articles.</a>
           </p>
         </div>
       </section>
