feat(articles): add MCP tutorial and practices.

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                                     <span class="tech-tag">Docker</span>
                                     <span class="tech-tag">AWS</span>
                                     <span class="tech-tag">Terraform</span>
+                                    <span class="tech-tag">MCP</span>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +221,7 @@
             { name: 'Back', value: 7, color: '#e91e63' },
             { name: 'Database', value: 7, color: '#ff6b35' },
             { name: 'DevSecOps', value: 6, color: '#e91e63' },
-            { name: 'IA', value: 3, color: '#9c27b0' },
+            { name: 'IA', value: 4, color: '#9c27b0' },
             { name: 'Cyber', value: 2, color: '#8e44ad' },
         ];
 
